* Ensure Form.reset() returns a reference to the form element. [#309 state:resolved] [Phil, kangax]

* Give Enumerable#invoke support for invoking host objects' methods that don't have apply(). [#278 state:resolved] [Garrett Smith, jddalton, kangax]

* Ensure String#gsub escapes special characters if pattern is a string. [#252 state:resolved] [jddalton, Marton Kiss-Albert]

* Ensure Enumerable#grep escapes special characters if regex is a string. [#257 state:resolved] [jddalton, Marton Kiss-Albert]

* Ensure Element#adjacent matches the css expression against siblings and not children of siblings. [#244 state:resolved] [jddalton, Jean-Philippe]

* Ensure Element#descendants always returns an array. [#373 state:resolved] [kangax]

* Optimize Event.pointerX() and Event.pointerY() to calculate one coordinate instead of both. [#403 state:resolved] [jddalton, Nick Stakenburg]

* Optimize Element#getWidth and Element#getHeight to calculate one dimension instead of both. [jddalton]

* Add helper methods Element.(_getCssDimensions|_getCssWidth|_getCssWidth) to reduce repeated code. [jddalton]

* Add helper method Element._hasLayout to reduce repeated code. [jddalton]

* Add helper method Element._getRealOffsetParent to ensure offsetParent is accurate and prevent errors in Element#(cumulativeOffset|positionedOffset|viewportOffset). Closes #9416, #10192, #10248. [jddalton, kangax, psiborg, ronstoney]

* Stop Element#getOffsetParent from erroring in IE if the element isn't attached to the document. [jddalton, Tobie Langel]

* Fix IE issue with Element#getOffsetParent returning documentElement on some relatively positioned elements when using a strict doctype. [#90 state:resolved] [jddalton, Nick Stakenburg]

* Ensure Element#readAttribute works properly when accessing the invalid "type" attribute of an iframe. [#118 state:resolved] [Zekid, kangax]

* unit test: Add support for the Chrome browser in jstest.rb. [Andrew Dupont]
