@@ -12,6 +12,8 @@
     <li id="item_3" xml:lang="es-us" class="">Otra cosa</li>
   </ul>
 
+  <div id="attr_with_dash" dashed-id="something">blah</div>
+
   <!-- this form has a field with the name 'id',
     therefore its ID property won't be 'troubleForm': -->
   <form id="troubleForm">
